# rsapi

./: Cargo.toml  Makefile  build.rs
deployment/: docker-compose.yaml
env/: .env
migrations/: 20211230_init.sql
src/: app.rs  main.rs  table.rs  utils.rs
src/api/: mod.rs
